Quorum/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(Object var)
        boolean v = cast(boolean, var)
        if v = true
            output "passed"
        end
    end
end
