Quorum/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjBoolean.quorum
class Main
    action Main
        boolean v = true
        Test(v)
    end

    action Test(Integer var)
    end
end
